<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Satako</string>
    <string name="home">Beranda</string>
    <string name="history">Riwayat</string>
    <string name="user">Pengguna</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_heading">Selamat Datang di Satako</string>
    <string name="splash_subheading">Mulailah sekarang juga untuk dapat mengidentifikasi penyakit tanaman pokok Anda.</string>
    <string name="soil_image">Gambar Tanaman</string>
    <string name="back_button">Back Button</string>
    <string name="login_heading">Mari daftarkan diri Anda.</string>
    <string name="login_subheading">Masuk dengan data yang telah Anda masukkan saat anda mendaftar</string>
    <string name="register_heading">Buat akun Anda sendiri sekarang.</string>
    <string name="register_subheading">Sebelum itu, silakan isi formulir di bawah ini.</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="confirm_password">Konfirmasi Kata Sandi</string>
    <string name="sign_in">Masuk</string>
    <string name="register">Daftar</string>
    <string name="home_card_view">home card view</string>
    <string name="diagnose_now">Diagnosa Sekarang</string>
    <string name="history_image_view">History Image View</string>
    <string name="rice_brown_spot">Rice Brown Spot</string>
    <string name="example_date_time">July 12, 2021 12:00 PM</string>
    <string name="data_not_found">Data Tidak Ditemukan</string>
    <string name="diagnose">Diagnosa</string>
    <string name="diagnose_subheading">Anda dapat mencoba menggunakan kamera atau memilih foto dari galeri Anda</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="preview_image_view">Preview image view</string>
    <string name="start_diagnose">Mulai Diagnosa</string>
    <string name="preview">Pratinjau</string>
    <string name="result">Hasil</string>
    <string name="result_subheading">Akhirnya kami dapat menganalisis apa masalah tanaman Anda</string>
    <string name="description">Deskripsi</string>
    <string name="example_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultrices, velit nec scelerisque fringilla, lectus est egestas risus, in vehicula tellus diam eu arcu. Fusce facilisis elit semper, pretium arcu ut, ultrices dolor. Aliquam erat volutpat. Nam egestas leo vitae nunc lobortis sagittis. Phasellus varius iaculis quam at posuere. Integer tempor justo in facilisis tempus.</string>
    <string name="solution">Solusi</string>
    <string name="predicted_on">Di prediksi pada</string>
    <string name="profile">Profil</string>
    <string name="my_account">Akun Saya</string>
    <string name="profile_subheading">Informasi Anda di tempat ini</string>
    <string name="settings">Pengaturan</string>
    <string name="example_email">example@gmail.com</string>
    <string name="example_username">example_username</string>
    <string name="themes">Tema</string>
    <string name="language">Bahasa</string>
    <string name="clear_cache">Hapus Cache</string>
    <string name="image_sheet">Image Sheet</string>
    <string name="button">Tombol</string>
    <string name="image_sheet_description">image_sheet_description</string>
    <string name="login_failed">Email / Password salah.Silahkan coba lagi</string>
    <string name="please_fill_out_all_forms">Mohon isi semua kolom isian</string>
    <string name="success_register">Akun anda berhasil terdaftar!</string>
    <string name="disease_name">Nama Penyakit</string>
    <string name="cache_size">
        %1$s
    </string>
    <string name="dash">-</string>
    <string name="kb">KB</string>
    <string name="image_capture_button">Tombol Ambil Gambar</string>
    <string name="your_web_client_id">482958967330-u3u8ri56geu1at4lalfv3dig6o3jh77f.apps.googleusercontent.com</string>
    <string name="discover">Jelajahi</string>
    <string name="see_all">Lihat Semua</string>
    <string name="article_image">Gambar Artikel</string>
    <string name="example_title">contoh_judul</string>
    <string name="example_author">contoh_penulis</string>
    <string name="example_author_name">
        By %1$s
    </string>
    <string name="articles_subheading">Jelajahi apa yang terbaru di sini...</string>
    <string name="unexpected_type_of_credential">Jenis kredensial yang tidak terduga</string>
    <string name="failed_login">Gagal untuk Login</string>
    <string name="failed_to_get_credential">Gagal mengambil akun anda</string>
    <string name="invalid_googleid">Menerima respons token google id yang tidak valid</string>
    <string name="welcome">Selamat Datang</string>
    <string name="we_help_you_find_solution_nto_your_plant_problem">Kami membantu Anda menemukan solusi untuk masalah tanaman Anda</string>
    <string name="hello">Halo,</string>
    <string name="or">Atau</string>
    <string name="light">Terang</string>
    <string name="dark">Gelap</string>
    <string name="system_default">Bawaan Sistem</string>
    <string name="failed_to_get_history">Gagal mendapatkan riwayat</string>
    <string name="causes">Penyebab</string>
    <string name="failed_to_predict">Gagal Memprediksi. Silakan Coba Lagi</string>
    <string name="cache_cleared">Cache Terhapus</string>
    <string name="password_must_be_at_least_8_characters">Kata sandi minimal harus terdiri dari 8 karakter</string>
    <string name="invalid_email">Email tidak benar</string>
    <string name="required_email">Email dibutuhkan</string>
    <string name="required_password">Password dibutuhkan</string>
    <string name="required_name">Nama dibutuhkan</string>
    <string name="required_confirm_password">Konfirmasi Kata Sandi dibutuhkan</string>
    <string name="password_not_match">Kata Sandi tidak cocok</string>
    <string name="loading">Memuat</string>
    <string name="password_empty">Password Kosong</string>
    <string name="email_empty">Email Kosong</string>
    <string name="name_empty">Name Kosong</string>
    <string name="confirm_password_empty">Confirm Password Kosong</string>
    <string name="name_invalid">Nama harus antara 3 dan 50 karakter</string>
    <string name="password_invalid">Kata sandi minimal harus terdiri dari 8 karakter</string>
    <string-array name="article_title">
        <item>Beras: Biji-bijian Paling Penting di Dunia</item>
        <item>Gandum: Pemain Kunci dalam Ketahanan Pangan Global</item>
        <item>Jagung: Serbaguna dan Penting</item>
        <item>Kentang: Bahan Pangan Global</item>
        <item>Singkong: Akar yang Tahan Kekeringan</item>
        <item>Kedelai: Lebih dari Sekedar Kacang</item>
        <item>Sorgum: Tanaman yang Tangguh</item>
        <item>Milet: Biji-bijian yang Bergizi dan Kuat</item>
        <item>Jelai: Biji-bijian Kuno</item>
        <item>Ubi: Umbi dengan Banyak Kegunaan</item>
    </string-array>
    <string name="get_started">Ayo Mulai</string>
    <string name="okay">Baiklah</string>
</resources>