<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:id="@+id/article_card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="121dp"
    android:layout_marginHorizontal="24dp"
    app:cardCornerRadius="10dp"
    android:layout_marginBottom="12dp"
    app:strokeWidth="1dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="14dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/article_image"
            android:layout_width="92dp"
            app:cardCornerRadius="10dp"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/article_image_view"
                android:layout_width="92dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/article_image"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/article_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_toEndOf="@+id/article_image"
            android:maxLines="1"
            android:text="@string/example_title"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/article_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/article_title"
            android:layout_marginStart="13dp"
            android:layout_toEndOf="@+id/article_image"
            android:text="@string/example_author"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/article_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/article_author"
            android:layout_marginStart="13dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/article_image"
            android:maxLines="2"
            android:text="@string/example_lorem"
            android:textSize="12sp" />
    </RelativeLayout>


</com.google.android.material.card.MaterialCardView>