<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginBottom="11dp"
    android:layout_height="100dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/history_image_view"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/history_image_view"
            android:src="@drawable/sample_scan" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/history_image_view"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/history_disease_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_bold"
                android:text="@string/rice_brown_spot"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/history_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_medium"
                android:text="@string/example_date_time"
                android:textSize="12sp" />
        </LinearLayout>

    </RelativeLayout>


</com.google.android.material.card.MaterialCardView>